[package]
name = "prends-en-de-la-graine"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.15.3"
rand = "0.9.0"
image = "0.25.5"
bevy_prototype_lyon = "0.13.0"
marching-squares = "0.1.1"